--- a/spring-boot--practice-security/journalApplication/src/main/resources/application.properties
+++ b/spring-boot--practice-security/journalApplication/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.data.mongodb.uri=mongodb+srv://sonudhanik2812:HVENrtiVMxfV8ThP@cluster0.r
 spring.data.mongodb.database=journaldb
 server.port=8090
 spring.data.mongodb.auto-index-creation=true
+
+
+
+#priority -> 1.commandline arguments
+#            then application.properties
+#            then application.yml
